Enable USB audio and HID devices

--- a/arch/arm/configs/cyanogenmod_maxwell2qc_defconfig
+++ b/arch/arm/configs/cyanogenmod_maxwell2qc_defconfig
@@ -374,12 +374,14 @@ CONFIG_SND=y
 # CONFIG_SND_VERBOSE_PROCFS is not set
 # CONFIG_SND_DRIVERS is not set
 # CONFIG_SND_ARM is not set
+CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_RK29_SOC=y
 CONFIG_SND_I2S_DMA_EVENT_STATIC=y
 CONFIG_SND_RK29_SOC_RT5616=y
 CONFIG_SND_RK29_CODEC_SOC_SLAVE=y
 CONFIG_UHID=y
+CONFIG_USB_HIDDEV=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_ACRUX=y
 CONFIG_HID_ACRUX_FF=y
